# poker_bot

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/poker_bot/: __init__.py  __main__.py  app.py  cli.py
src/poker_bot/ai/: advisor.py  bot.py  cfr_base.py  infoset.py  mccfr.py  opponent_model.py  parallel_mccfr.py  strategy.py  subgame.py  trainer.py  vanilla_cfr.py
src/poker_bot/ai/abstraction/: action_abstraction.py  action_translation.py  card_abstraction.py  isomorphism.py
src/poker_bot/ai/deep_cfr/: __init__.py  deep_cfr.py  features.py  memory.py  networks.py
src/poker_bot/ai/rebel/: __init__.py  belief.py  rebel.py  value_net.py
src/poker_bot/game/: actions.py  card.py  deck.py  engine.py  hand_eval.py  player.py  rules.py  state.py
src/poker_bot/games/: kuhn.py  leduc.py
src/poker_bot/ui/screens/: advisor_screen.py  main_menu.py  play_screen.py  training_screen.py
src/poker_bot/ui/styles/: app.tcss
src/poker_bot/ui/widgets/: action_bar.py  card_widget.py  equity_display.py  hand_history.py  player_widget.py  table.py
tests/: test_abstraction.py  test_action_abstraction.py  test_bot.py  test_card.py  test_card_abstraction.py  test_cfr_variants.py  test_clone.py  test_deck.py  test_deep_cfr.py  test_engine.py  test_hand_eval.py  test_kuhn_cfr.py  test_mccfr.py  test_opponent_model.py  test_parallel_mccfr.py  test_performance.py  test_rebel.py  test_subgame.py  test_ui.py
